--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,6 +11,18 @@
     image-rendering: pixelated;
 }
 
+#separador{
+    height: 250px;
+}
+
+#logo
+{
+    position: absolute;
+    bottom: 400px;
+    z-index: 0;
+
+}
+
 #container {
 
     display: flex;
@@ -21,8 +33,45 @@
 
 }
 
-#container h2 
+h2 
 {
     color: aliceblue;
     font-family: 'yummy nickels', 'Regular';
+}
+
+#aboutYN {
+
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: justify;
+
+}
+
+#aboutContainer {
+    color: white;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+}
+
+#botoes {
+    color:beige;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    z-index: 2;
+    
+}
+
+#botoes button 
+{
+    font-family: 'yummy nickels', 'Regular';
+    font-size: 25px;
+    color: white;
+    height: 60px;
+    width: 200px;
+    cursor: pointer;
 }
