correção de bugs nas rotas

--- a/public/css/ap.css
+++ b/public/css/ap.css
@@ -89,3 +89,13 @@
     background-color: transparent;
     
 }
+
+#segredo 
+{
+    height: 20px;
+    width: 50px;
+    position: fixed;
+    left: 380px;
+    top: 380px;
+    background-color: transparent;
+}
