--- a/public/css/ap.css
+++ b/public/css/ap.css
@@ -135,7 +135,10 @@
 
 #grafico
 {
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     height: 100%;
     width: 70%;
     background-color: yellow;
@@ -144,8 +147,41 @@
 #kpis {
     height: 100%;
     width: 30%;
-    background-color: blue;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 20px;
+    
 }
+
+#kpi1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 20px 20px 20px;
+    height: 20%;
+    width: 90%;
+    color: green;  
+    background-color: rgb(0, 30, 0);  
+    font-size: 64px;
+    border-radius: 20px;
+    font-family: 'Press Start 2P', cursive;
+}
+
+#kpi2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 20px 20px 20px;
+    height: 20%;
+    width: 90%;
+    color: green;  
+    background-color: rgb(0, 30, 0);  
+    font-size: 64px;
+    border-radius: 20px;
+    font-family: 'Press Start 2P', cursive;
+}
+
 
 #fechar{
     cursor: pointer;
@@ -156,8 +192,7 @@
     font-size: 20px;
     font-weight: 900;
     height: 32px;
-    width: 32px;
-    border-radius: 5px;
+    width: 100%;
     
 }
 
