--- a/public/css/livraria.css
+++ b/public/css/livraria.css
@@ -19,12 +19,67 @@ body{
 
 #resultado 
 {
-    display: block;
+    display: none;
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 2150px;
-    height: 1080px;
-    background-color: #0e0a1e98;
+    width: 1520px;
+    height: 855px;
+    background-color: #0e0a1ed2;
 }
+
+#containerImg{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#desenho {
+    image-rendering: pixelated;
+    height: 700px;
+    width: auto;
+    
+}
+
+#containerLivros{
+    position: fixed;
+    top: 110px;
+    left: 25px;
+    height: 660px;
+    width: 1415px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+#linha{
+    display: flex;
+    justify-content: space-between;
+}
+
+.estante{
+
+    height: 150px;
+    width: 645px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    
+}
+
+.livro
+{
+ height: 145px;
+ width: 119px;
+ gap: 2px;
+ cursor: pointer;
+
+
+}
+
+
 
