--- a/public/css/ap.css
+++ b/public/css/ap.css
@@ -154,16 +154,21 @@
     
 }
 
+#coisinho{
+
+}
+
 #kpi1 {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 20px 20px 20px 20px;
     height: 20%;
     width: 90%;
+    margin: 20px 20px 20px 20px;
     color: green;  
     background-color: rgb(0, 30, 0);  
-    font-size: 64px;
+    font-size: 48px;
     border-radius: 20px;
     font-family: 'Press Start 2P', cursive;
 }
@@ -177,18 +182,36 @@
 }
 
 
-#kpi2{
+#ranking{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
     margin: 20px 20px 20px 20px;
-    height: 20%;
+    height: 80%;
     width: 90%;
     color: green;  
     background-color: rgb(0, 30, 0);  
     font-size: 64px;
     border-radius: 20px;
     font-family: 'Press Start 2P', cursive;
+}
+
+#sonho
+{
+
+    justify-content: center;
+    text-align: center;
+    margin-left: 50px;
+}
+
+#rankingEmSi{
+    width: 80%;
+    height: 100%; 
+    font-size: 9px;
+    background-color: transparent;
+    font-family: 'Press Start 2P', cursive;
+    margin-top: 15px;
 }
 
 
@@ -217,4 +240,15 @@
     background-color: transparent;
 
 
+}
+
+#sonho {
+    align-self: flex-start;
+    margin-top: 20px;
+    border-radius: 5px;
+    color: green;
+    padding-left: 10px;
+    height: 30px;
+    width: 40%;
+    border: 2px solid green;
 }
